adding update/delete to socials and icons
