# openapi.yaml
@@ -69,11 +69,7 @@ paths:
         - Account
       responses:
         200:
-          description: The request succeeded and the item is included in the response.
-          content:
-            text/html:
-              schema:
-                type: string
+          $ref: '#/components/schemas/AccountDetail'
         404:
           $ref: '#/components/responses/NotFound'
         500:
@@ -81,19 +77,19 @@ paths:
       x-amazon-apigateway-request-validator: Validate All
       x-amazon-apigateway-integration:
         uri:
-          Fn::Sub: arn:${AWS::Partition}:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${AccountConfigView.Arn}/invocations
+          Fn::Sub: arn:${AWS::Partition}:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${GetAccountFunction.Arn}/invocations
         httpMethod: POST
         type: aws_proxy
     put:
       summary: Update account information
-      description: Replaces all details for an existing account with the data passed in the request body
+      description: Replaces the account name
       tags:
         - Account
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/AccountDetail'
+              $ref: '#/components/schemas/AccountUpdate'
         required: true
       responses:
         204:
@@ -106,6 +102,24 @@ paths:
       x-amazon-apigateway-integration:
         uri:
           Fn::Sub: arn:${AWS::Partition}:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${UpdateAccountFunction.Arn}/invocations
+        httpMethod: POST
+        type: aws_proxy
+    delete:
+      summary: Delete an account
+      description: Remove an account and delete all scheduled messages
+      tags:
+        - Account
+      responses:
+        204:
+          $ref: '#/components/responses/NoContentUpdate'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/InternalServerError'
+      x-amazon-apigateway-request-validator: Validate All
+      x-amazon-apigateway-integration:
+        uri:
+          Fn::Sub: arn:${AWS::Partition}:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${DeleteAccountFunction.Arn}/invocations
         httpMethod: POST
         type: aws_proxy
 
@@ -373,39 +387,38 @@ components:
         id:
           type: string
 
+    AccountUpdate:
+      type: object
+      properties:
+        name:
+          type: string
+      required:
+        - name
+        
     AccountDetail:
       type: object
       properties:
-        x:
-          type: object
-          properties:
-            apiKey:
-              type: string
-            apiKeySecret:
-              type: string
-            accessToken:
-              type: string
-            accessTokenSecret:
-              type: string
-            bearerToken:
-              type: string
-            removeCredentials:
-              type: boolean
-        linkedIn:
-          type: object
-          properties:
-            type:
-              type: string
-              enum: [personal, organization]
-            organizationId:
-              type: string
-            removeCredentials:
-              type: boolean
-        discord:
-          type: object
-          properties:
-            channel:
-              type: string
+        id:
+          type: string
+        name:
+          type: string
+        screenName:
+          type: string
+        platform:
+          type: string
+          enum: [x, linkedin, discord]
+        createdDate:
+          type: string
+          format: date-time
+        expires:
+          type: string
+          format: date-time
+      required:
+        - id
+        - name
+        - screenName
+        - platform
+        - createdDate
 
   responses:
     Created: #201
